[Layout] fix help dialog - alignment.

--- a/src/app/dashboard/src/components/help-dialog/help-dialog.component.scss
+++ b/src/app/dashboard/src/components/help-dialog/help-dialog.component.scss
@@ -55,7 +55,6 @@
 
   .option {
     display: flex;
-    align-items: center;
     margin-bottom: 16px;
     color: $color-1;
 
